--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/masked-view": "^0.1.7",
     "@react-native-community/netinfo": "^6.0.0",
-    "@react-native-community/toolbar-android": "^0.1.0-rc.2",
+    "@react-native-community/toolbar-android": "^0.2.1",
     "@react-native-firebase/analytics": "^10.1.0",
     "@react-native-firebase/app": "^10.1.0",
     "@react-native-firebase/crashlytics": "^10.1.0",
