--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: "com.android.application"
 apply plugin: "com.google.gms.google-services"
-apply plugin: 'com.google.firebase.crashlytics'
+apply plugin: "com.google.firebase.crashlytics"
 
 import com.android.build.OutputFile
 
@@ -10,8 +10,8 @@ project.ext.envConfigFiles = [
     anothercustombuild: ".env",
 ]
 
-apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
-googleServices { disableVersionCheck = true }
+// apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
+// googleServices { disableVersionCheck = true }
 
 /**
  * The react.gradle file registers a task for each build variant (e.g. bundleDebugJsAndAssets
@@ -144,11 +144,16 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.rndiffapp"
+        configurations.all {
+          resolutionStrategy { force 'androidx.core:core:1.6.0' }
+        }
+        applicationId "com.esp.isus"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 3020004
+        versionName "3.20.4"
+        resValue "string", "build_config_package", "com.esp.isus"
+        // manifestPlaceholders = [onesignal_app_id: project.env.get("ONE_SIGNAL_KEY"), onesignal_google_project_number: project.env.get("ONE_SIGNAL_PROJECT_NUMBER")]
     }
     splits {
         abi {
