--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -10,9 +10,8 @@ project.ext.envConfigFiles = [
     anothercustombuild: ".env",
 ]
 
-// apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
-// googleServices { disableVersionCheck = true }
-
+apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
+googleServices { disableVersionCheck = true }
 /**
  * The react.gradle file registers a task for each build variant (e.g. bundleDebugJsAndAssets
  * and bundleReleaseJsAndAssets).
@@ -95,7 +94,6 @@ project.ext.react = [
 apply from: "../../node_modules/react-native/react.gradle"
 apply from: "../../node_modules/react-native-code-push/android/codepush.gradle"
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
-
 /**
  * Set this to true to create two separate APKs instead of one:
  *   - An APK that only works on ARM devices
@@ -144,16 +142,13 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        configurations.all {
-          resolutionStrategy { force 'androidx.core:core:1.6.0' }
-        }
         applicationId "com.esp.isus"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 3020004
+        versionCode 242
         versionName "3.20.4"
         resValue "string", "build_config_package", "com.esp.isus"
-        // manifestPlaceholders = [onesignal_app_id: project.env.get("ONE_SIGNAL_KEY"), onesignal_google_project_number: project.env.get("ONE_SIGNAL_PROJECT_NUMBER")]
+        manifestPlaceholders = [onesignal_app_id: project.env.get("ONE_SIGNAL_KEY"), onesignal_google_project_number: project.env.get("ONE_SIGNAL_PROJECT_NUMBER")]
     }
     splits {
         abi {
@@ -170,6 +165,7 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        // Para deploy da app para as lojas, solicitar acesso a keystore e as key-informations.
     }
     buildTypes {
         debug {
@@ -207,9 +203,11 @@ android {
 }
 
 dependencies {
+    implementation 'com.facebook.soloader:soloader:0.9.0+'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
+	  implementation project(':react-native-config')
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
@@ -243,6 +241,7 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+
 /////////////////////////////////////////////////////////////////////////////
 ///    Configuração inicial do onesignal de acordo com a documentação     ///
 /////////////////////////////////////////////////////////////////////////////
