--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,7 +13,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath('com.android.tools.build:gradle:7.0.3')
+        classpath("com.android.tools.build:gradle:4.2.2")
         classpath('com.google.gms:google-services:4.3.3')
         classpath('com.google.firebase:firebase-crashlytics-gradle:2.2.0')
         // NOTE: Do not place your application dependencies here; they belong
@@ -35,7 +35,13 @@ allprojects {
         }
 
         google()
-        jcenter()
         maven { url 'https://www.jitpack.io' }
+    }
+    configurations.all {
+        resolutionStrategy {
+            dependencySubstitution {
+                substitute module("com.redmadrobot:input-mask-android:6.0.0") using module('com.github.RedMadRobot:input-mask-android:6.0.0')
+            }
+        }
     }
 }
