--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,7 +3,35 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '11.0'
 
-target 'RnDiffApp' do
+# fixes for last Mac updates
+def find_and_replace(dir, findstr, replacestr)
+  Dir[dir].each do |name|
+      text = File.read(name)
+      replace = text.gsub(findstr,replacestr)
+      if text != replace
+          puts "Fix: " + name
+          File.open(name, "w") { |file| file.puts replace }
+          STDOUT.flush
+      end
+  end
+  Dir[dir + '*/'].each(&method(:find_and_replace))
+end
+
+# Post Install processing for Flipper
+def flipper_post_install(installer)
+  installer.pods_project.targets.each do |target|
+    if target.name == 'YogaKit'
+      target.build_configurations.each do |config|
+        config.build_settings['SWIFT_VERSION'] = '4.1'
+      end
+    end
+  end
+end
+
+target 'isusapp' do
+  # ExternalPods
+  pod 'OneSignal', '>= 3.0', '< 4.0'
+
   config = use_native_modules!
 
   use_react_native!(
@@ -12,7 +40,7 @@ target 'RnDiffApp' do
     :hermes_enabled => false
   )
 
-  target 'RnDiffAppTests' do
+  target 'isusappTests' do
     inherit! :complete
     # Pods for testing
   end
@@ -20,15 +48,13 @@ target 'RnDiffApp' do
   # Enables Flipper.
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
-  # you should disable the next line.
-  use_flipper!()
-
+  # you should disable these next few lines.
+  add_flipper_pods!
   post_install do |installer|
     react_native_post_install(installer)
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 end
-
 
 target 'OneSignalNotificationServiceExtension' do
   pod 'OneSignal', '>= 3.0', '< 4.0'
