--- a/ios/isusapp.xcodeproj/xcshareddata/xcschemes/isusapp.xcscheme
+++ b/ios/isusapp.xcodeproj/xcshareddata/xcschemes/isusapp.xcscheme
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-<<<<<<< HEAD
-   LastUpgradeVersion = "1300"
-=======
    LastUpgradeVersion = "1210"
->>>>>>> c427891f0e88898f1c9ef85cb2c14e43df1affed
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -19,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "RnDiffApp.app"
-               BlueprintName = "RnDiffApp"
-               ReferencedContainer = "container:RnDiffApp.xcodeproj">
+               BuildableName = "isusapp.app"
+               BlueprintName = "isusapp"
+               ReferencedContainer = "container:isusapp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -37,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "RnDiffAppTests.xctest"
-               BlueprintName = "RnDiffAppTests"
-               ReferencedContainer = "container:RnDiffApp.xcodeproj">
+               BuildableName = "isusappTests.xctest"
+               BlueprintName = "isusappTests"
+               ReferencedContainer = "container:isusapp.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -59,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "RnDiffApp.app"
-            BlueprintName = "RnDiffApp"
-            ReferencedContainer = "container:RnDiffApp.xcodeproj">
+            BuildableName = "isusapp.app"
+            BlueprintName = "isusapp"
+            ReferencedContainer = "container:isusapp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -76,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "RnDiffApp.app"
-            BlueprintName = "RnDiffApp"
-            ReferencedContainer = "container:RnDiffApp.xcodeproj">
+            BuildableName = "isusapp.app"
+            BlueprintName = "isusapp"
+            ReferencedContainer = "container:isusapp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
