--- a/ios/isusapp/Info.plist
+++ b/ios/isusapp/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>RnDiffApp</string>
+	<string>isusapp</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -17,37 +17,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-<<<<<<< HEAD
-	<string>3.20.2</string>
-=======
 	<string>1.0</string>
->>>>>>> c427891f0e88898f1c9ef85cb2c14e43df1affed
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-<<<<<<< HEAD
-	<string>28</string>
-	<key>CodePushDeploymentKey</key>
-	<string>$(CODEPUSH_KEY)</string>
-	<key>LSApplicationQueriesSchemes</key>
-	<array>
-		<string>fbapi</string>
-		<string>fb-messenger-share-api</string>
-		<string>fbauth2</string>
-		<string>fbshareextension</string>
-		<string>fb</string>
-		<string>twitter</string>
-		<string>twitterauth</string>
-		<string>linkedin</string>
-		<string>linkedin-sdk2</string>
-		<string>linkedin-sdk</string>
-		<string>youtube</string>
-		<string>vnd.youtube</string>
-		<string>instagram</string>
-	</array>
-=======
 	<string>1</string>
->>>>>>> c427891f0e88898f1c9ef85cb2c14e43df1affed
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
