--- a/ios/isusapp/Info.plist
+++ b/ios/isusapp/Info.plist
@@ -45,9 +45,9 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Precisamos utilizar sua localização</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Precisamos de acesso à biblioteca de fotos para que as fotos possam ser selecionadas</string>
+	<string>Precisamos de acesso à biblioteca de fotos para seu uso</string>
 	<key>NSUserTrackingUsageDescription</key>
-	<string>Precisamos de acesso para entregar anúncios personalizados para você</string>
+	<string>Precisamos de acesso para entregar anúncios personalizados</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AntDesign.ttf</string>
