--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "android": "cross-env ENVFILE=.env.dev react-native run-android --variant debug",
     "ios": "cross-env ENVFILE=.env.dev react-native-fix-image && react-native run-ios",
-    "android-prod": "cross-env ENVFILE=.env react-native run-android",
+    "android-prod": "cross-env ENVFILE=.env react-native run-android --variant=release",
     "ios-prod": "cross-env ENVFILE=.env react-native-fix-image && react-native run-ios --configuration Release",
     "start": "react-native start",
     "fix": "yarn lint --fix",
