--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,9 @@
   "settings": {
     "react": {
       "version": "detect"
+    },
+    "import/resolver": {
+      "babel-plugin-root-import": {}
     }
   }
 }
