--- a/package.json
+++ b/package.json
@@ -80,6 +80,8 @@
     "babel-jest": "^26.6.3",
     "cross-env": "^7.0.2",
     "editorconfig": "^0.15.3",
+    "babel-plugin-root-import": "^6.6.0",
+    "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "eslint": "^7.14.0",
     "eslint-config-airbnb": "17.1.1",
     "eslint-config-prettier": "^6.0.0",
