--- a/package.json
+++ b/package.json
@@ -75,16 +75,17 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/react-native": "^7.2.0",
     "appcenter-cli": "^2.7.1",
     "babel-jest": "^26.6.3",
+    "babel-plugin-root-import": "^6.6.0",
     "cross-env": "^7.0.2",
     "editorconfig": "^0.15.3",
-    "babel-plugin-root-import": "^6.6.0",
-    "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "eslint": "^7.14.0",
     "eslint-config-airbnb": "17.1.1",
     "eslint-config-prettier": "^6.0.0",
+    "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "eslint-plugin-import": "2.18.0",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
